2007-10-31  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-shell-command): Call `start-file-process'
	directly.  Fix bug in deleting temp file.

2007-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-mode-abbrev-table): Use :regexp.
	Merge defvar and define-abbrev-table.
	(def-python-skeleton): Use :case-fixed and :enable-function.
	(python-abbrev-pc-hook, python-abbrev-syntax-table, python-pea-hook):
	Remove.
	(python-mode): Don't modify pre-abbrev-expand-hook.

2007-10-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* ediff-util.el (ediff-file-checked-out-p)
	(ediff-file-checked-in-p): Only call vc-locking-user for XEmacs.

2007-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (abbrev-symbol): Correct let->let*.
	(abbrev--before-point): Only use abbrev-start-location if before point.

2007-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* strokes.el (strokes-alphabetic-lessp): Simplify.  Doc fix.
	(strokes-unload-hook): Remove function and variable.
	(strokes-unload-function): New-style unload function, adapted
	from `strokes-unload-hook'.

	* emacs-lisp/cl.el (cl-cannot-unload): Remove function.
	(cl-unload-hook): Remove variable.
	(cl-unload-function): New-style unload function, adapted
	from `cl-cannot-unload'.

	* emacs-lisp/elp.el (elp-unload-hook): Remove function and variable.
	(elp-unload-function): New-style unload function, adapted
	from `elp-unload-hook'.

2007-10-31  Sean O'Rourke  <sorourke@cs.ucsd.edu>

	* emacs-lisp/find-func.el (find-library): Use library at
	point as default interactive argument.

2007-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* shadowfile.el (shadow-join): Remove.
	(shadow-shadows): Use `mapconcat' instead of `shadow-join'.
	(shadow-initialize): Use `write-file-functions', not `write-file-hooks'.
	(shadowfile-unload-hook): Remove function and variable.
	(shadowfile-unload-function): New-style unload function, adapted
	from `shadowfile-unload-hook'.
